# django-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  pyproject.toml
.github/workflows/: _lint.yml  _test.yml  ci.yml
app/: .env.example  manage.py
app/config/: asgi.py  urls.py
app/config/settings/: __init__.py  base.py  local.py  production.py  staging.py  test.py
tests/: conftest.py
